# Surr

Surveillance2024_py-main/: .gitignore  README.md  face__recognition.py  main.py  model.py  pyproject.toml
Surveillance2024_py-main/.devcontainer/: Dockerfile  devcontainer.json
Surveillance2024_py-main/.history/: pyproject_20240219221844.toml
Surveillance2024_py-main/face/: 人臉.txt
Surveillance2024_py-main/yunet/: README.md
